--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "waldo",
+  "homepage": "https://ZZpapillon.github.io/waldo",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+     "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
